Separate CMakeLists for Engine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,53 +42,6 @@ foreach(item ${RESOURCES})
     CopyAsset(${item} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Resources)
 endforeach()
 
-# Setup embedded source
-set(EMBEDDED_INPUT
-        shaders/Default3D.frag
-        shaders/Default3D.vert
-        shaders/Default2D.vert
-        shaders/SingleColor2D.frag
-        shaders/Texture2D.frag
-        shaders/Font.vert
-        shaders/Font.frag
-        shaders/Text3D.frag
-        shaders/SingleColor3D.frag
-        shaders/Post.vert
-        shaders/PostCopy.frag
-        shaders/PostColor.frag
-        shaders/PostFXAA.frag
-        shaders/PostFog.frag
-        shaders/PostGamma.frag
-        shaders/PostGlow.frag
-        shaders/PostGlowBlur.frag
-        shaders/Deferred.frag
-        shaders/Particle.vert
-        shaders/Particle.geom
-        shaders/Particle.frag
-        shaders/Water.vert
-        shaders/Water.frag
-    )
-
-# Headerize
-macro(ProcessWithHeaderize headervar sourcevar inputfile outdir)
-    get_filename_component(basefile ${inputfile} NAME)
-    set(outputfile ${outdir}/${basefile})
-    set_source_files_properties(${outputfile} PROPERTIES HEADER_ONLY TRUE)
-    add_custom_command(
-        OUTPUT ${outputfile}.hpp ${outputfile}.cpp
-        COMMAND Headerize ${inputfile} ${outputfile}
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        DEPENDS ${inputfile}
-        COMMENT "Generating headers for ${inputfile}"
-    )
-    list(APPEND ${headervar} ${outputfile}.hpp)
-    list(APPEND ${sourcevar} ${outputfile}.cpp)
-endmacro()
-
-foreach(item ${EMBEDDED_INPUT})
-    ProcessWithHeaderize(EMBEDDED_HEADER EMBEDDED_SOURCE ${item} ${CMAKE_CURRENT_BINARY_DIR})
-endforeach()
-
 # Doxygen documentation
 option(AMESITE_BUILD_DOCS "Build the doxygen documentation" OFF)
 find_package(Doxygen)
@@ -106,144 +59,7 @@ if(DOXYGEN_FOUND AND AMESITE_BUILD_DOCS)
 endif()
 
 ## TARGETS ##
-
-## Engine ##
-set(ENGINE_SRCS
-        src/Engine/MainWindow.cpp
-        src/Engine/RenderTarget.cpp
-        src/Engine/Resources.cpp
-        src/Engine/Audio/SoundBuffer.cpp
-        src/Engine/Audio/VorbisFile.cpp
-        src/Engine/Audio/WaveFile.cpp
-        src/Engine/Font/Font.cpp
-        src/Engine/Geometry/Geometry2D.cpp
-        src/Engine/Geometry/Square.cpp
-        src/Engine/Geometry/Geometry3D.cpp
-        src/Engine/Geometry/Terrain.cpp
-        src/Engine/Geometry/Cube.cpp
-        src/Engine/Geometry/Plane.cpp
-        src/Engine/Geometry/OBJModel.cpp
-        src/Engine/Geometry/Map.cpp
-        src/Engine/Lighting/DeferredLighting.cpp
-        src/Engine/Shader/Shader.cpp
-        src/Engine/Shader/ShaderProgram.cpp
-        src/Engine/Util/FileSystem.cpp
-        src/Engine/Util/Log.cpp
-        src/Engine/Util/Settings.cpp
-        src/Engine/Util/Input.cpp
-        src/Engine/Util/Picking.cpp
-        src/Engine/Util/Profiling.cpp
-        src/Engine/Component/SuperComponent.cpp
-        src/Engine/Component/Lens.cpp
-        src/Engine/Component/Transform.cpp
-        src/Engine/Component/Mesh.cpp
-        src/Engine/Component/Material.cpp
-        src/Engine/Component/RelativeTransform.cpp
-        src/Engine/Component/Physics.cpp
-        src/Engine/Component/Collider2DRectangle.cpp
-        src/Engine/Component/Collider2DCircle.cpp
-        src/Engine/Component/ParticleEmitter.cpp
-        src/Engine/Component/DirectionalLight.cpp
-        src/Engine/Component/PointLight.cpp
-        src/Engine/Component/SpotLight.cpp
-        src/Engine/Component/Animation.cpp
-        src/Engine/Component/SoundSource.cpp
-        src/Engine/Component/Listener.cpp
-        src/Engine/Entity/Entity.cpp
-        src/Engine/Scene/Scene.cpp
-        src/Engine/System/RenderSystem.cpp
-        src/Engine/System/PhysicsSystem.cpp
-        src/Engine/System/CollisionSystem.cpp
-        src/Engine/System/ParticleSystem.cpp
-        src/Engine/System/ParticleRenderSystem.cpp
-        src/Engine/System/AnimationSystem.cpp
-        src/Engine/System/SoundSystem.cpp
-        src/Engine/Texture/Texture.cpp
-        src/Engine/Texture/Texture2D.cpp
-        src/Engine/PostProcessing/PostProcessing.cpp
-        src/Engine/PostProcessing/ColorFilter.cpp
-        src/Engine/PostProcessing/FXAAFilter.cpp
-        src/Engine/PostProcessing/FogFilter.cpp
-        src/Engine/PostProcessing/GammaCorrectionFilter.cpp
-        src/Engine/PostProcessing/GlowFilter.cpp
-        src/Engine/PostProcessing/GlowBlurFilter.cpp
-        src/Engine/GameObject/SuperGameObject.cpp
-        src/Engine/Physics/AxisAlignedBoundingBox.cpp
-        src/Engine/Physics/Frustum.cpp
-    )
-
-set(ENGINE_HEADERS
-        src/Engine/MainWindow.hpp
-        src/Engine/RenderTarget.hpp
-        src/Engine/Resources.hpp
-        src/Engine/Audio/SoundBuffer.hpp
-        src/Engine/Audio/SoundFile.hpp
-        src/Engine/Audio/VorbisFile.hpp
-        src/Engine/Audio/WaveFile.hpp
-        src/Engine/Font/Font.hpp
-        src/Engine/Geometry/Geometry2D.hpp
-        src/Engine/Geometry/Square.hpp
-        src/Engine/Geometry/Geometry3D.hpp
-        src/Engine/Geometry/Terrain.hpp
-        src/Engine/Geometry/Cube.hpp
-        src/Engine/Geometry/Plane.hpp
-        src/Engine/Geometry/OBJModel.hpp
-        src/Engine/Geometry/Map.hpp
-        src/Engine/Lighting/DeferredLighting.hpp
-        src/Engine/Shader/Shader.hpp
-        src/Engine/Shader/ShaderProgram.hpp
-        src/Engine/Util/FileSystem.hpp
-        src/Engine/Util/Log.hpp
-        src/Engine/Util/Settings.hpp
-        src/Engine/Util/Input.hpp
-        src/Engine/Util/Picking.hpp
-        src/Engine/Util/Profiling.hpp
-        src/Engine/Component/SuperComponent.hpp
-        src/Engine/Component/Lens.hpp
-        src/Engine/Component/Transform.hpp
-        src/Engine/Component/Mesh.hpp
-        src/Engine/Component/Material.hpp
-        src/Engine/Component/RelativeTransform.hpp
-        src/Engine/Component/Physics.hpp
-        src/Engine/Component/Collider2DRectangle.hpp
-        src/Engine/Component/Collider2DCircle.hpp
-        src/Engine/Component/ParticleEmitter.hpp
-        src/Engine/Component/DirectionalLight.hpp
-        src/Engine/Component/PointLight.hpp
-        src/Engine/Component/SpotLight.hpp
-        src/Engine/Component/Animation.hpp
-        src/Engine/Component/SoundSource.hpp
-        src/Engine/Component/Listener.hpp
-        src/Engine/Entity/Entity.hpp
-        src/Engine/Scene/Scene.hpp
-        src/Engine/System/RenderSystem.hpp
-        src/Engine/System/PhysicsSystem.hpp
-        src/Engine/System/CollisionSystem.hpp
-        src/Engine/System/ParticleSystem.hpp
-        src/Engine/System/ParticleRenderSystem.hpp
-        src/Engine/System/AnimationSystem.hpp
-        src/Engine/System/SoundSystem.hpp
-        src/Engine/Texture/Texture.hpp
-        src/Engine/Texture/Texture2D.hpp
-        src/Engine/PostProcessing/PostProcessing.hpp
-        src/Engine/PostProcessing/Filter.hpp
-        src/Engine/PostProcessing/ColorFilter.hpp
-        src/Engine/PostProcessing/FXAAFilter.hpp
-        src/Engine/PostProcessing/FogFilter.hpp
-        src/Engine/PostProcessing/GammaCorrectionFilter.hpp
-        src/Engine/PostProcessing/GlowFilter.hpp
-        src/Engine/PostProcessing/GlowBlurFilter.hpp
-        src/Engine/GameObject/SuperGameObject.hpp
-        src/Engine/Physics/AxisAlignedBoundingBox.hpp
-        src/Engine/Physics/Frustum.hpp
-    )
-
-create_directory_groups(${ENGINE_SRCS} ${ENGINE_HEADERS})
-
-add_library(Engine STATIC ${ENGINE_SRCS} ${ENGINE_HEADERS} ${EMBEDDED_SOURCE})
-target_link_libraries(Engine glew glfw ${GLFW_LIBRARIES} glm OpenALSoft simpleini stb)
-set_property(TARGET Engine PROPERTY CXX_STANDARD 11)
-set_property(TARGET Engine PROPERTY CXX_STANDARD_REQUIRED ON)
+add_subdirectory(src)
 
 ## Game ##
 set(GAME_SRCS
