--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -152,6 +152,7 @@ set(EMBEDDED_INPUT
     ../../shaders/Font.vert
     ../../shaders/Font.frag
     ../../shaders/LightTiles.frag
+    ../../shaders/LightTilesDebug.frag
     ../../shaders/Text3D.frag
     ../../shaders/SingleColor3D.frag
     ../../shaders/Post.vert
